<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shopping Organiser</string>
    <string name="default_list_home">Home</string>
    <string name="default_list_shop">Shop</string>
    <string name="editingItemActivityLabel">Edit Items</string>
    <string name="editingListActivityLabel">Edit Lists</string>
    <string name="menu_edit_list">Edit this list</string>
    <string name="menu_edit_lists">Edit lists</string>
    <string name="menu_continue">Continue shopping</string>
    <string name="menu_restart">Restart shopping</string>
    <string name="menu_done">Done</string>
    <string name="menu_help">Help</string>
    <string name="new_list">New list</string>
    <string name="new_item">New item</string>
    <string name="add_item">Add</string>
	<string name="remove_item">Remove</string>
    <string name="edit_name">Edit name</string>
    <string name="list_name_prompt">New list name:</string>
    <string name="item_name_prompt">New item name:</string>
    <string name="list_del_prompt">Are you sure you wish to delete this list? This action cannot be undone</string>
    <string name="item_del_prompt">Are you sure you wish to delete this item from all lists? This action cannot be undone</string>
    <string name="grabber_description">Drag to reorder or delete</string>
    <string name="info_all_items_bought">All needed items have been bought!</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="menu_settings">Settings</string>
    <string name="setting_title_backup">Backup Options</string>
    <string name="setting_export">Export</string>
	<string name="setting_export_process">Exporting database to</string> 
    <string name="setting_export_summary_1">Will export to</string>
    <string name="setting_export_summary_2">in external storage root</string>
    <string name="setting_export_success">Successful backup</string>
    <string name="setting_import">Import</string>
	<string name="setting_import_process">Restoring database from</string> 
    <string name="setting_import_summary_1">Will import from</string>
    <string name="setting_import_summary_2">file in external storage root</string>
    <string name="setting_import_success">Successful import from backup</string>
    <string name="setting_backup_no_ext">External storage not available</string>
    <string name="bag_reminder">Remember to bring your own bags!</string>
    <string name="first_time_help_title">Welcome to Shopping Organiser!</string>
    <string name="first_time_help_introduction">This application is meant to ease the process of normal home shopping.\nAll screens have a Help menu item available at the top right, use it whenever you are not sure about something.</string>
    <string name="first_time_help_normal_use_title">Normal Use of this Application</string>
    <string name="first_time_help_normal_use">To begin a new shopping spree use the \'Restart shopping\' menu option.\nUse the \'Home\' view to go through your house, according to your specified layout, checking off items you will need to buy.\nOn your local shop, use a \'Shop\' view to see the items you need to buy, they will be displayed in the order set up for the shop.\nGo through the shop checking off the items as you pick them up to keep track of your purchase.</string>
    <string name="first_time_help_setup_title">Application Setup</string>
    <string name="first_time_help_setup">You will need to edit the initial lists (or add new ones) and add all of the items you normally buy (items appear in all lists, lists only setup the order in which they appear).\nReorder the items using drag and drop in each edit list screen according to your Home and local Shop layout (you can add more shops for more layouts).</string>
    <string name="first_time_help_never_show_again">Never show again</string>
    <string name="shopping_help_title">Shopping Help</string>
    <string name="shopping_help_introduction">This is the main application screen, it manages the Home view and as many Shop views as you have created, you can change views on the top left menu. Home view allows you to check items that you need to buy, only those items will appear in Shop views, where you will be able to check items as you pick them up.</string>
    <string name="shopping_help_quick_reference_title">Menu Quick Reference</string>
    <string name="shopping_help_quick_reference_menu_edit_list">Edit this list: Takes you to the screen where you can add items, and also set the ordering of the items for the current list.</string>
    <string name="shopping_help_quick_reference_menu_edit_lists">Edit lists: Takes you to the screen where you can add new shop lists (in case you normally use more than one local shop and need more than one shop layout), you can also edit the names of the initial lists.</string>
    <string name="shopping_help_quick_reference_menu_continue">Continue shopping: allows you to quickly clear from your Shop views the items you have bought but keep those still needed. In Home view items bought will be unchecked.</string>
    <string name="shopping_help_quick_reference_menu_restart">Restart shopping: allows you to quickly uncheck all items on all lists so you can start your shopping anew.</string>
    <string name="help_menu_help">Help: On the top right of your screen you will always have the question mark icon, use it to get tips on the use of the current screen.</string>
    <string name="edit_items_help_title">Edit Items Help</string>
    <string name="edit_items_help_introduction">This screen lets you add, reorder and rename items.</string>
    <string name="edit_items_help_quick_reference_title">Quick Reference</string>
    <string name="edit_items_help_quick_reference_menu_done">Done: Closes this screen.</string>
    <string name="edit_items_help_quick_reference_add_item">Add: Write a new item name to the left and tap the \'Add\' button to add the new item.</string>
    <string name="edit_items_help_quick_reference_grabber">Grabber: Hold and move this icon upwards or downwards to change the position of an item in the current list. You can also drag it to the left to delete an item</string>
    <string name="edit_lists_help_title">Edit Lists Help</string>
    <string name="edit_lists_help_introduction">This screen lets you rename shopping lists, and add new shop lists (in case you normally use more than one local shop and need more than one shop layout)</string>
    <string name="edit_lists_help_quick_reference_title">Quick Reference</string>
    <string name="edit_lists_help_quick_reference_menu_done">Done: Closes this screen.</string>
    <string name="edit_lists_help_quick_reference_add_list">Add: Write a new list name to the left and tap the \'Add\' button to add the new list.</string>
    <string name="edit_lists_help_quick_reference_edit">Edit: Tap this button to edit a list name</string>
    
</resources>