<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent" >

	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="vertical"
		android:paddingLeft="6dip"
		android:paddingRight="6dip" >

	    <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/edit_items_help_introduction" />

	    <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/edit_items_help_quick_reference_title"
		    android:textStyle="bold" />

	    <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/help_menu_help"
		    android:drawableLeft="@drawable/help" />

	    <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/edit_items_help_quick_reference_menu_done"
		    android:drawableLeft="@drawable/accept" />

	    <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/edit_items_help_quick_reference_add_item"
		    android:drawableLeft="@drawable/iconnew" />

    	<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/edit_items_help_quick_reference_grabber"
		    android:drawableLeft="@drawable/grabber" />

	</LinearLayout>
</ScrollView>