<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_item_edit"
        android:showAsAction="ifRoom"
        android:icon="@drawable/edit"
        android:title="@string/menu_edit_list" />
    <item android:id="@+id/menu_item_restart"
        android:showAsAction="ifRoom"
        android:icon="@drawable/restart"
        android:title="@string/menu_restart" />
    <item android:id="@+id/menu_item_editLists"
        android:showAsAction="ifRoom"
        android:icon="@drawable/editlists"
        android:title="@string/menu_edit_lists" />
    <item android:id="@+id/menu_item_help"
        android:showAsAction="always"
        android:icon="@drawable/help"
        android:title="@string/menu_help" />

</menu>
