<?xml version="1.0" encoding="utf-8"?>
<!-- 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
		<TextView
			android:id="@+id/dialog_title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:textSize="15sp"
			android:layout_gravity="center"
			android:gravity="center"
			android:layout_weight="1" 
			android:text="@string/first_time_help_title"/>
		<ImageButton android:id="@+id/close_button"
		    android:layout_width="30dip"
		    android:layout_height="30dip"
		    android:scaleType="centerCrop"
		    android:layout_gravity="top|right"
		    android:src="@drawable/remove"
		    style="@style/ButtonHoloLight" />
	</LinearLayout>
-->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="5dip" >
	
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:orientation="vertical"
			android:paddingLeft="6dip"
			android:paddingRight="6dip" >

		    <TextView
			    android:id="@+id/help_introduction"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:text="@string/first_time_help_introduction"/>
	
		    <CheckBox android:id="@+id/help_never_show_again"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/first_time_help_never_show_again"
		        />
		    
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textStyle="bold" 
			    android:text="@string/first_time_help_normal_use_title"/>
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/first_time_help_normal_use" />
	
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textStyle="bold" 
			    android:text="@string/first_time_help_setup_title" />
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:text="@string/first_time_help_setup" />

		</LinearLayout>
	</ScrollView>
<!-- 
</LinearLayout>
 -->